seaweedfs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweed-filer-ingress
  namespace: lab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - secretName: tls-secret
  rules:
    - host: swfs-filer.lab.s-miras.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-filer
                port:
                  number: 8888
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweed-s3-ingress
  namespace: lab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - secretName: tls-secret
  rules:
    - host: swfs-s3.lab.s-miras.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-s3
                port:
                  number: 8333
